--- a/src/components/app/index.module.scss
+++ b/src/components/app/index.module.scss
@@ -1,15 +1,9 @@
 .app {
-  :global {
-    .box1 {
-      width: 100%;
-      height: 100px;
-      background-color: #32669a;
+    :global {
+        .box {
+            width: 100%;
+            height: 100px;
+            background-color: #32669a;
+        }
     }
-
-    .box2 {
-      width: 100%;
-      height: 100px;
-      background-color: #6464b6;
-    }
-  }
 }
