--- a/src/assats/style/variables.scss
+++ b/src/assats/style/variables.scss
@@ -1,6 +1,28 @@
-:global {
-  .font-size {
-    font-size: 32px;
-    font-weight: 600;
-  }
-}
+$min-width: 1240px;
+$white: #fff;
+$black: #000;
+$gray-1: #111;
+$gray-2: #333;
+$gray-3: #666;
+$gray-4: #999;
+$gray-5: #d8d8d8;
+$gray-6: #e8e8e8;
+$gray-7: #f9f9f9;
+$gray-8: #e2e2e2;
+$gray-9: #f4f4f8;
+$space-xxs: 4px;
+$space-xs: 8px;
+$space-sm: 12px;
+$space-md: 16px;
+$space-lg: 24px;
+$height-nav: 64px;
+$height-xl: 48px;
+$height-lg: 40px;
+$height-md: 36px;
+$height-sm: 32px;
+$height-xs: 24px;
+$text-color-primary: rgb(0 0 0 / 87%);
+$text-color-common: rgb(0 0 0 / 65%);
+$text-color-secondary: rgb(0 0 0 / 38%);
+$border-color-base: rgb(0 0 0 / 6%);
+$main-blue: rgb(41 138 236 / 100%);
