feat(view): initial

--- a/src/assats/style/variables.scss
+++ b/src/assats/style/variables.scss
@@ -26,3 +26,11 @@ $text-color-common: rgb(0 0 0 / 65%);
 $text-color-secondary: rgb(0 0 0 / 38%);
 $border-color-base: rgb(0 0 0 / 6%);
 $main-blue: rgb(41 138 236 / 100%);
+$font-family-regular-sc: 'PingFangSC-Regular', 'PingFang SC', sans-serif;
+$font-family-medium-sc: 'PingFangSC-Medium', 'PingFang SC', sans-serif;
+$font-family-semibold-akrobat: 'Akrobat-SemiBold', 'Akrobat', sans-serif;
+$font-family-extrabold-akrobat: 'Akrobat-ExtraBold', 'Akrobat', sans-serif;
+$font-family-helveticaneue-medium: 'HelveticaNeue-Medium', 'HelveticaNeue', sans-serif;
+$font-family-bold-akrobat: 'Akrobat-Bold', 'Akrobat', sans-serif;
+$font-family-helvetica-neue: 'HelveticaNeue', sans-serif;
+$font-family-opposans: 'OPPOSans-B', 'OPPOSans', sans-serif;
