feat(view): 框架重构优化

--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -1,36 +1,33 @@
-$min-width: 1240px;
+$min-width: 1440px;
 $white: #fff;
 $black: #000;
-$gray-1: #111;
-$gray-2: #333;
-$gray-3: #666;
-$gray-4: #999;
-$gray-5: #d8d8d8;
-$gray-6: #e8e8e8;
-$gray-7: #f9f9f9;
-$gray-8: #e2e2e2;
-$gray-9: #f4f4f8;
 $space-xxs: 4px;
 $space-xs: 8px;
 $space-sm: 12px;
 $space-md: 16px;
 $space-lg: 24px;
-$height-nav: 64px;
+$height-nav: 70px;
 $height-xl: 48px;
 $height-lg: 40px;
 $height-md: 36px;
 $height-sm: 32px;
 $height-xs: 24px;
-$text-color-primary: rgb(0 0 0 / 87%);
-$text-color-common: rgb(0 0 0 / 65%);
-$text-color-secondary: rgb(0 0 0 / 38%);
-$border-color-base: rgb(0 0 0 / 6%);
-$main-blue: rgb(41 138 236 / 100%);
-$font-family-regular-sc: 'PingFangSC-Regular', 'PingFang SC', sans-serif;
-$font-family-medium-sc: 'PingFangSC-Medium', 'PingFang SC', sans-serif;
-$font-family-semibold-akrobat: 'Akrobat-SemiBold', 'Akrobat', sans-serif;
-$font-family-extrabold-akrobat: 'Akrobat-ExtraBold', 'Akrobat', sans-serif;
-$font-family-helveticaneue-medium: 'HelveticaNeue-Medium', 'HelveticaNeue', sans-serif;
-$font-family-bold-akrobat: 'Akrobat-Bold', 'Akrobat', sans-serif;
-$font-family-helvetica-neue: 'HelveticaNeue', sans-serif;
-$font-family-opposans: 'OPPOSans-B', 'OPPOSans', sans-serif;
+$font-family-pingfang: 'PingFang SC', sans-serif;
+$bg-white: #fff;
+$bg-black: #000;
+$bg-black-1: #0c0d0d;
+$bg-black-2: #181a1d;
+$bg-black-3: #121416;
+$tc-white: rgb(255 255 255);
+$tc-white-25: rgb(255 255 255 / 25%);
+$tc-white-65: rgb(255 255 255 / 65%);
+$tc-white-85: rgb(255 255 255 / 85%);
+$tc-black: rgb(0 0 0);
+$tc-black-25: rgb(0 0 0 / 25%);
+$tc-black-65: rgb(0 0 0 / 65%);
+$tc-black-85: rgb(0 0 0 / 85%);
+$bg-cyan: #4ef0ff;
+$brand-color-1: #0035dd;
+$brand-color-2: #06f;
+$brand-color-3: #009cfe;
+$brand-gradient: linear-gradient(270deg, $brand-color-2 0%, $brand-color-3 100%);
