--- a/src/components/server-error/index.module.scss
+++ b/src/components/server-error/index.module.scss
@@ -1,4 +1,4 @@
-.not-found {
+.server-error {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,10 +8,10 @@
   background: #131415;
 
   :global {
-    .not-found {
-      width: 396px;
-      height: 326px;
-      background: url('@/images/common/404.png') no-repeat center center / cover;
+    .server-error {
+      width: 344px;
+      height: 323px;
+      background: url('@/images/common/500.png') no-repeat center center / cover;
     }
 
     span {
