--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,37 @@
+* {
+  scrollbar-width: none;
+}
+
 body {
-  margin: 0;
   overflow: hidden;
-  font-family: PingFangSC-Regular, 'PingFang SC', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-    Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'PingFang SC', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #f0f5fa;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 #root {
   height: 100%;
 }
 
-.ant-spin-spinning {
-  position: absolute;
+.ant-app {
+  height: 100%;
+}
+
+.ant-spin-nested-loading {
+  height: 100%;
+  background: #0c0d0d;
+}
+
+.ant-spin-nested-loading div .ant-spin {
   top: 50%;
-  left: 50%;
-  display: inline-block;
-  transform: translate(-50%);
+  transform: translateY(-50%);
+}
+
+.ant-spin-nested-loading div .ant-spin .ant-spin-text {
+  color: #009cfe;
+  text-shadow: none;
 }
