chore(project): 重构项目,调整项目结构

--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -1,5 +1,5 @@
 @charset "UTF-8";
 
-@import 'style/animation';
-@import 'style/mixin';
-@import 'style/variables';
+@import './styles/animation';
+@import './styles/mixin';
+@import './styles/variables';
