--- a/src/components/NotFound/index.module.scss
+++ b/src/components/NotFound/index.module.scss
@@ -1,4 +1,4 @@
-.server-error {
+.not-found {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,10 +8,10 @@
   background: #131415;
 
   :global {
-    .server-error {
-      width: 344px;
-      height: 323px;
-      background: url('@/images/common/500.png') no-repeat center center / cover;
+    .not-found {
+      width: 396px;
+      height: 326px;
+      background: url('@/assets/images/404.png') no-repeat center center / cover;
     }
 
     span {
